lx/test/fixtures/parser/invalid/return-outside-function.lx
// Invalid: return in middle of script (not at EOF)
let x = 1
return 5
let y = 2
